# paperbot

./: .editorconfig  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.loki.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
codex/: BOOTSTRAP.md  MASTER_PROMPT.md  ROADMAP.md  STATE.json
config/: config.yaml  llm.yaml  prometheus.yml
config/exchanges/: binance_spot.yml  stocks_paper.yml
config/grafana/provisioning/alerting/: mtm-missing.yml  patterns-min-activity.yml
config/grafana/provisioning/dashboards/: dashboards.yaml  dashboards.yml  paperbot-crypto.json  paperbot-stocks.json  paperbot.json
config/loki/: config.yml
config/promtail/: config.yml
data/: ledger.parquet  memory.sqlite  trades.parquet
data/decisions/: phase2.jsonl
docs/: RUNBOOK.md  SRE.md  metrics.md
docs/decisions/: ADR-0000-template.md  ADR-0001-signal-schema.md  ADR-0002-risk-engine-guardrails.md  ADR-0003-metrics-naming.md  ADR-0004-offline-determinism.md  ADR-0005-branching-and-releases.md  ADR-0006-execution-profiles.md  ADR-0007-partial-fills.md  ADR-0012-pattern-observability.md  README.md
docs/pr/: phase-2-5-events-notifications.md  phase-2-final-gapfill.md  phase-2-mvp.md  phase-2.2-exec-refinements.md  phase-3-llm-advisory.md
prompts/: decision_v1.md
reports/: index.html
scripts/: setup_env.sh  smoke_pattern_obs.sh  verify_dashboards.py
services/sse_gateway/: main.py
src/paperbot/: __init__.py  main.py
src/paperbot/config/: __init__.py  loader.py
src/paperbot/data/: __init__.py  candles.py
src/paperbot/events/: bus.py  metrics.py  schema.py
src/paperbot/exec/: __init__.py  model.py  simulator.py
src/paperbot/features/: __init__.py  expansion.py  feature_builder.py
src/paperbot/ledger/: __init__.py  ledger.py
src/paperbot/llm/: __init__.py  agent.py  client.py  contracts.py  guards.py  router.py
src/paperbot/logs/: decision_log.py
src/paperbot/metrics/: __init__.py  core.py  exec.py  llm.py
src/paperbot/reports/: __init__.py  charts.py  generate.py
src/paperbot/risk/: __init__.py  engine.py  halt_flags.py  killswitch.py
src/paperbot/strategies/: __init__.py  base.py  momentum.py  mr.py  runner.py
tests/: __init__.py  test_daily_loss_limit.py  test_e2e_execution_demo.py  test_events_bus.py  test_events_schema.py  test_exec_exchange_profiles.py  test_exec_metrics_emission.py  test_exec_partial_fills.py  test_exec_simulator.py  test_feature_builder_extra.py  test_feature_builder_phase11.py  test_features_expansion.py  test_ledger.py  test_llm_contracts.py  test_llm_guards.py  test_llm_memory.py  test_llm_metrics.py  test_metrics_accounting.py  test_pattern_observability.py  test_risk_engine.py  test_slippage_models.py  test_slippage_random_bps.py  test_strategies_base.py  test_strategies_momentum.py  test_strategies_mr.py
(+6 files in other folders)
