[tool.poetry]
name = "paperbot"
version = "0.1.0"
description = "Algorithmic trading research bot"
authors = ["Your Name <your@email.com>"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
packages = [{ include = "paperbot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
ccxt = "*"
pandas = "*"
numpy = "*"
pyarrow = "*"
ta = "*"
pydantic = "*"
prometheus_client = "*"
jinja2 = "*"
matplotlib = "*"
duckdb = "*"
python-dotenv = "*"
pyyaml = "*"
redis = "*"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
black = "*"
ruff = "*"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Optional: configure Ruff to target src/ and basic rules (can be extended later)
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
